...
    onClick: () -> Unit,
) {
    val knownProgress = jobs.mapNotNull(ActiveJobItem::progress)
    Box(contentAlignment = Alignment.Center) {
        IconButton(
            onClick = onClick,
            modifier = Modifier.testTag("active-jobs-toggle"),
        ) {
            Icon(
                Icons.Outlined.WorkHistory,
                contentDescription = stringResource(R.string.background_jobs),
                tint = when {
                    storageWarning.isWarning -> MaterialTheme.colorScheme.error
...
